# ExoPIBrain

./: .gitignore  Cargo.toml  README.md  config.py  constants.py  device_config.toml  main.py  pyvenv.cfg  requirements.txt  utils.py
asserts/: asserts.py  checks.py
data/: eff_analysis.py
data_readers/: stream_reader.py
display/: ui.py
display/gui_kilian/: comboboxes.py  ui_kilian.py
exopibrain/: config.py  main.py  utils.py
exopibrain/asserts/: asserts.py  checks.py
exopibrain/battery/: battery_monitor.py
exopibrain/data/: eff_curves.csv
exopibrain/display/: ui.py
exopibrain/energy/: efficiency.py
exopibrain/fuel_cell/: actuators.py  contactors.py  fuel_cell.py  precharge.py
exopibrain/multithreading/: consumers.py  stream_reader.py  thread.py
exopibrain/procedures/: shutdown.py  start.py
exopibrain/sensors/: gps.py  pressure.py  rpmonitor.py  temperature.py
exowatch/: ReadMe.adoc  exowatch.ino  sketch.json  thingProperties.h
fuel_cell/: actuators.py  fuel_cell.py  precharge.py
multithreading/: consumers.py  processor.py  sensor_reader.py  stream_reader.py  thread.py
multithreading/protocols/: digital_stream_reader.py  serial_stream_reader.py  smbus_stream_reader.py
procedures/: shutdown.py  start.py
procedures/exception_handling/: messages.py  sensor_result.py
sensors/: battery_gauges.py  gps.py  imu.py  pressure.py  rpmonitor.py  sensor_error.py  start_button.py  temperature.py
sensors/imu/: adxl345.py  (+7 more)
src/: boat.rs  config.rs  interface.rs  lib.rs  main.rs  telemetry.rs
tests/: temperature_pressure.py  valve_control.py
(+28 files in other folders)
