[package]
name = "exo_pi_brain_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rppal = "0.18"
ratatui = "0.26.3"
crossterm = "0.27.0"
